# forecast

./: .env.example  .gitignore  Makefile  README.md  app.py  enterprise_finance_forecasting_mvp_spec.md  finance_forecast_lab_frontend(1).html  pyproject.toml
.streamlit/: config.toml
docs/: 财务预测使用说明.md
pages/: __init__.py  create_experiment.py  experiments.py  result_analysis.py  run_status.py
sample_data/: didi_finance_forecast_example.xlsx  finance_monthly_demo.xlsx  finance_monthly_invalid.xlsx
scripts/: clean_runtime.py  generate_demo_data.py  generate_didi_example_data.py  init_db.py
src/: __init__.py
src/core/: config.py  constants.py  exceptions.py  logging.py
src/domain/: __init__.py  enums.py  models.py
src/jobs/: __init__.py  job_runner.py  train_worker.py
src/repositories/: experiment_repository.py
src/services/: autogluon_service.py  baseline_service.py  chart_service.py  custom_model_service.py  data_quality_service.py  didi_example_service.py  evaluation_service.py  excel_service.py  export_service.py  forecast_driver_service.py  mapping_service.py
src/storage/: file_store.py  parquet.py  sqlite.py
src/ui/: __init__.py  components.py  theme.py
tests/unit/: test_autogluon_service.py  test_baseline_service.py  test_chart_service.py  test_custom_model_service.py  test_data_quality_service.py  test_didi_example_service.py  test_evaluation_service.py  test_excel_service.py  test_experiment_repository.py  test_forecast_driver_service.py
